# LocalizationProject

./: .gitignore  CMakeLists.txt  ICP_LOCALIZATION.ipynb  NDT.ipynb  NDT_localization.ipynb  ground_truth.csv  main.cpp  out.csv  voxel_grid.cpp
