cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(LocalizationProject)
find_package(PCL 1.0 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcd_read_test ~/LocalizationProject/main.cpp)
add_executable(voxel_grip ~/LocalizationProject/voxel_grid.cpp)
target_link_libraries (voxel_grip ${PCL_LIBRARIES})
target_link_libraries (pcd_read_test ${PCL_LIBRARIES})
